--- a/src/main/resources/static/book_list.html
+++ b/src/main/resources/static/book_list.html
@@ -10,5 +10,6 @@
         <a th:href="@{|/book/detail/${book.id}|}" th:text="${book.title}"></a>
     </td>
 </tr>
+<a th:href="@{/book/create}" class="btn btn-primary">도서 등록하기</a>
 </body>
 </html>
